# routx

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  cargo_build_wrapper.py  cross_compile.py  meson.build
.github/workflows/: check.yml
bindings/: tests.cpp
bindings/include/: routx.h  routx.hpp
src/: c.rs  graph.rs  lib.rs  main.rs  rdp.rs
src/serialize/: binary.rs  mod.rs
